# snarkOS

./: .gitignore  .parameters.json  Cargo.toml  Dockerfile  bullshark.md  run-bft.sh
.circleci/: config.yml
cli/: Cargo.toml
cli/src/commands/: start.rs
cli/src/helpers/: logger.rs
docker/: start-docker-node.sh
node/: Cargo.toml
node/bft-consensus/: Cargo.toml
node/bft-consensus/src/: lib.rs  setup.rs  state.rs  validation.rs
node/bft-consensus/tests/: basics.rs
node/bft-consensus/tests/common/: mod.rs  objects.rs  setup.rs  state.rs  transaction.rs  validation.rs
node/bft/events/src/: lib.rs
node/bft/events/src/helpers/: codec.rs
node/bft/examples/: simple_node.rs  start-nodes.sh
node/bft/ledger-service/src/: ledger.rs  mock.rs
node/bft/src/: bft.rs  gateway.rs  lib.rs  primary.rs  worker.rs
node/bft/src/helpers/: proposal.rs
node/bft/src/sync/: mod.rs
node/bft/storage-service/src/: persistent.rs
node/consensus/: Cargo.toml
node/consensus/src/: lib.rs  tests.rs
node/consensus/src/memory_pool/: transactions.rs
node/messages/: Cargo.toml
node/messages/src/: consensus_id.rs  lib.rs  quorum.rs
node/messages/src/helpers/: block_locators.rs
node/metrics/src/: names.rs
node/narwhal/: Cargo.toml
node/narwhal/events/fuzz/: Cargo.toml
node/narwhal/examples/: create-containers.sh  docker.10-peer.network.txt  docker.15-peer.network.txt  docker.20-peer.network.txt  docker.25-peer.network.txt  docker.4-peer.network.txt  simple_node.rs  start-docker-node.sh
node/narwhal/proptest-regressions/helpers/: committee.txt
node/narwhal/src/: bft.rs  gateway.rs  primary.rs  worker.rs
node/narwhal/src/helpers/: channels.rs  committee.rs  dag.rs  pending.rs  storage.rs
node/narwhal/src/sync/: mod.rs
node/narwhal/tests/: bft_e2e.rs
node/narwhal/tests/common/: primary.rs  utils.rs
node/rest/: Cargo.toml
node/rest/src/: axum_routes.rs  lib.rs  routes.rs
node/rest/src/helpers/: auth.rs  error.rs
node/router/: Cargo.toml
node/router/src/: handshake.rs  heartbeat.rs  inbound.rs  lib.rs
node/router/src/helpers/: peer.rs  sync.rs
node/router/tests/: cleanups.rs
node/router/tests/common/: router.rs
node/src/: lib.rs  node.rs
node/src/beacon/: mod.rs  router.rs
node/src/client/: router.rs
node/src/prover/: router.rs
node/src/validator/: mod.rs  router.rs
node/sync/src/: block_sync.rs
node/tcp/src/protocols/: on_connect.rs
node/tests/: rewards.rs
node/tests/common/: node.rs  test_peer.rs
snarkos/: main.rs
tx_generator/src/: main.rs
