[package]
name = "snarkos-node-bft-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bincode = "1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.36"

# below are the dependencies for BFT
consensus = { git = "https://github.com/eqlabs/bullshark-bft/", package = "narwhal-consensus", features = ["benchmark"]  }
config = { git = "https://github.com/eqlabs/bullshark-bft/", package = "narwhal-config" }
crypto = { git = "https://github.com/eqlabs/bullshark-bft/", package = "narwhal-crypto" }
executor = { git = "https://github.com/eqlabs/bullshark-bft/", package = "narwhal-executor" }
node = { git = "https://github.com/eqlabs/bullshark-bft/", package = "narwhal-node", features = ["benchmark"]  }
worker = { git = "https://github.com/eqlabs/bullshark-bft/", package = "narwhal-worker", features = ["benchmark"] }
types = { git = "https://github.com/eqlabs/bullshark-bft/", package = "narwhal-types" }
storage = { git = "https://github.com/eqlabs/bullshark-bft/", package = "narwhal-storage" }
store = { git = "https://github.com/eqlabs/bullshark-bft/", package = "typed-store" }
mysten-metrics = { git = "https://github.com/eqlabs/bullshark-bft/" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "235211dc8195590f5353d38135f5ee51a267521e" }
rand = { version = "0.8.5", features = ["small_rng"] }
prometheus = "0.13"
arc-swap = "1.5.1"
eyre = "0.6.8"
anyhow = "1"
thiserror = "1.0.38"
